cmake_minimum_required(VERSION 3.12)
project(hw5)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexperimental-library")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Threads REQUIRED)

add_executable(hw7-1 hw7-1.cpp)
add_executable(hw7-2 hw7-2.cpp)
add_executable(hw7-3 hw7-3.cpp)
add_executable(hw7-4 hw7-4.cpp)
target_link_libraries(hw7-1 Threads::Threads)
target_link_libraries(hw7-2 Threads::Threads)
target_link_libraries(hw7-3 Threads::Threads)
target_link_libraries(hw7-4 Threads::Threads)
